메시지 전송 및 응답 받기
openai에 메시지 전송 및 응답 받아오기 구현

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <div class="container">
         <h1 class="text-bg-light rounded-3 p-3 text-center">Menu Recommendation</h1>
         <div class="chat-content" id="chat-messages">
-            <div class="line">
+            <!-- <div class="line">
                 <span class="chat-box">Hello! What do you want to eat?</span>
             </div>
             <div class="line">
                 <span class="chat-box mine">I want to eat something spicy.</span>
-            </div>
+            </div> -->
         </div>
         <div class="input-group mb-3">
             <input type="text" class="form-control" id="input" placeholder="메시지를 입력하세요." aria-label="Type your message" aria-describedby="button-addon2">
